--- a/infoapp/templates/infoapp/info_form.html
+++ b/infoapp/templates/infoapp/info_form.html
@@ -11,6 +11,7 @@
 		
    		<h3><center>Info List</center></h3>
 		<form method='POST' enctype="multipart/form-data">
+			{% csrf_token %}
 			{{ form.as_p }}
 			<input type="submit" class="btn btn-primary" value="Save">
 		</form>
